# marius

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BRICKS.md  CONTEXT_FILES.md  DECISIONS.md  GUARDIAN_POLICY.md  PLAN.md  README.md  ROADMAP.md  docker-compose.searxng.yml  pyproject.toml
.hermes/plans/: 2026-05-07_131203-kernel-boundaries-marius.md  2026-05-07_143141-plan-par-brique-marius.md  2026-05-07_151308-provider-adapter-agent-blueprints.md  2026-05-07_153059-render-adapter-slice.md  2026-05-07_154403-context-builder-slice.md  2026-05-07_155700-project-context-slice.md  2026-05-07_162721-project-context-permissions-slice.md  2026-05-07_185324-guardian-policy-slice.md
docker/searxng/: settings.yml
docs/: index.md  memory-architecture.md
docs/adapters/: context_window.md  http_provider.md
docs/host/: repl.md  router.md
docs/kernel/: compaction.md  context_builder.md  context_window.md  contracts.md  guardian_policy.md  project_context.md  provider.md  runtime.md  session.md
docs/provider_config/: index.md
docs/render/: adapter.md
docs/storage/: ui_history.md
front/: app.js  index.html  objectif.md  style.css
marius/: __init__.py  cli.py
marius/adapters/: context_window.py  http_provider.py
marius/channels/: __init__.py
marius/config/: checks.py  contracts.py  doctor.py  store.py  wizard.py
marius/dreaming/: __init__.py  context.py  engine.py  operations.py  prompt.py  report.py
marius/gateway/: __init__.py  __main__.py  client.py  launcher.py  protocol.py  scheduler_runner.py  server.py  service.py  (+1 more)
tests/: test_cli_logs.py  test_cli_web.py
(+177 files in other folders)
